[metadata]
version = 0.0.9
name = blis
author = Matthew Honnibal
author-email = matt@explosion.ai
description-file = README.md
summary = The Blis BLAS-like linear algebra library, as a self-contained C-extension.
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT 
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    blis
    blas

[files]
packages = 
    blis

package-data =
    blis =
        arch-headers/*/*.h
        blis.c
        blis.pxd
        blis.pyx
