[metadata]
name = blis
version = 0.0.12
author = Matthew Honnibal
author-email = matt@explosion.ai
description-file = README.md
summary = The Blis BLAS-like linear algebra library, as a self-contained C-extension.
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT 
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    blis
    blas

[extension=blis.blis]
sources = blis/blis.c

[build_ext]
pre-hook.build_ext_pre_hook = _setup_hooks.build_ext_pre_hook

[files]
packages = 
    blis
